src/main/metadata/objects/ApplicationLogTHDFW__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debug_Level__c</fullName>
        <label>Debug Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Picklist__c</fullName>
        <label>Error Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Created</fullName>
                </value>
                <value>
                    <fullName>Interface related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Payload__c</fullName>
        <label>Integration Payload</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Code__c</fullName>
        <label>Log Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <description>conaitns auto generated log #</description>
        <displayFormat>ALOG-{00000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Information__c</fullName>
        <label>Reference Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Function__c</fullName>
        <label>Source Function</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timer__c</fullName>
        <label>Timer</label>
        <type>DateTime</type>
    </fields>
    <label>ApplicationLogTHDFW</label>
    <nameField>
        <label>ApplicationLogTHDFW Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApplicationLogsTHDFW</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>